# _ztrading

./: .env.example  .gitignore  IMPLEMENTATION.md  README.md  backtest_results.json  backtest_results.txt  nova_tui.py  pyproject.toml
.claude/: settings.local.json
backtest/: __init__.py  costs.py  engine.py  metrics.py  report.py  resolver.py
cli/: app.py
core/: __init__.py  constants.py  types.py
data/: __init__.py  loader.py  mt5_export.py
ea/: NovaGold_Baseline.mq5  NovaGold_ML.mq5  model_M1.onnx  model_M5.onnx
live/: __init__.py  db.py  monitor.py  mt5_bridge.py  signal_loop.py
live/data/: live_sessions.db  live_sessions.db-shm  live_sessions.db-wal
ml/: __init__.py  features.py  labeling.py  optimizer.py  trainer.py
scripts/: export_mt5_data.py  export_onnx.py  generate_synthetic_data.py  quick_backtest.py  run_backtest_comparison.py
strategy/: __init__.py  breakout.py  keltner.py  regime.py
tests/: test_keltner.py  test_resolver.py
