[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novagold-reborn"
version = "0.1.0"
description = "Regime-Aware Breakout Filter for XAU/USD"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "typer>=0.12",
    "rich>=13.7",
    "numba>=0.60",
    "optuna>=3.6",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
mt5 = [
    "MetaTrader5>=5.0",
]

[project.scripts]
nova = "cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "data", "strategy", "backtest", "ml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
